--- a/book-store-api/package.json
+++ b/book-store-api/package.json
@@ -12,7 +12,8 @@
   "type": "module",
   "dependencies": {
     "express": "^4.21.2",
-    "joi": "^17.13.3"
+    "joi": "^17.13.3",
+    "mongoose": "^8.12.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
