--- a/book-store-api/package.json
+++ b/book-store-api/package.json
@@ -11,6 +11,7 @@
   "description": "",
   "type": "module",
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "joi": "^17.13.3",
